# font2bytes

./: .gitignore  .qmake.cache.in  CMakeLists.txt  FontToBytes-cli.pro  FontToBytes-gui.pro  FontToBytes.pro  README.md  bytewriter.h  common.pri  conversionconfig.cpp  conversionconfig.h  conversionrunnable.cpp  conversionrunnable.h  droplabel.cpp  droplabel.h  droppablestackedwidget.cpp  droppablestackedwidget.h  imageconverter.cpp  imageconverter.h  inputqimage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake.yml
cli/: CMakeLists.txt  cli.pro  inputpngimage.cpp  inputpngimage.h  main.cpp  png_read.c  png_read.h
f2b/: CMakeLists.txt  convertererror.h  f2b.h  f2b.pro  fixedconverter.cpp  fixedconverter.h  fontconverter.h  sourcecodegenerator.cpp  sourcecodegenerator.h
gui/: assets.qrc  gui.pro
gui/conv/: conversionconfig.cpp  conversionconfig.h  conversionrunnable.cpp  conversionrunnable.h  conversionservice.cpp  conversionservice.h  imageconverter.cpp  imageconverter.h  inputqimage.cpp  inputqimage.h
gui/lib/: inputimage.h  sourcecodegenerator.h
gui/ui/: coloredstatusbar.cpp  droplabel.cpp  droplabel.h  droppablestackedwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  promptlabel.cpp  promptlabel.h  shakeanimation.cpp  shakeanimation.h
gui/x11/: font2bytes.desktop
lib/: CMakeLists.txt  bytewriter.cpp  bytewriter.h  convertererror.cpp  convertererror.h  f2b.h  fixedconverter.cpp  fixedconverter.h  fixedwidthfontconverter.cpp  fixedwidthfontconverter.h  fontconverter.h  lib.pro  sourcecodegenerator.cpp  sourcecodegenerator.h
templates/: template16x11.psd  template8x8.psd
ui/: coloredstatusbar.h  droplabel.cpp  droplabel.h  droppablestackedwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  promptlabel.cpp  shakeanimation.cpp  shakeanimation.h
